<resources>
    <string name="app_name">Rabbit Hole Tracker</string>
    <string name="app_name_display">Rabbit Hole Tracker</string>

    <string name="util_email">Email</string>
    <string name="util_password">Password</string>

    <string name="login_welcome">Welcome</string>
    <string name="login_email_placeholder">E-mail address</string>
    <string name="login_password_placeholder">Password</string>
    <string name="login_signup">Sign up</string>
    <string name="login_signUp_CreateAccount">Create Account</string>
    <string name="login_button">Log in</string>
    <string name="logout_menu_title">Log out</string>
    <string name="cancel">Cancel</string>
    <string name="logout_dialogTitle">Do you really want to log out?</string>
    <string name="logout_dialog_description">Please only logout if strictly necessary.\nYou will additionally need to disable the Accessibility Service for this app.</string>

    <!-- Strings related to login -->
    <string name="prompt_username">StudyID</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login_prompt_password_repeat">Repeat Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid StudyID</string>
    <string name="invalid_password">Password must be at least 6 characters</string>
    <string name="invalid_password_no_match">Both passwords need to match</string>
    <string name="invalid_data_error">Entered data is not valid!</string>
    <string name="login_failed">"Login failed"</string>
    <string name="study_code">XXYYZZ, with the following rules:\n\nXX the first two letters of the first name of your mother.\nYY ist the day of your birthday\nZZ are the first two letters of the streetname your are living in</string>

    <!-- ESM -->
    <string name="esm_unlock_intention_question">What do you want to use your phone for?</string>
    <string name="esm_unlock_intention_hint">Your Intention</string>
    <string name="esm_unlock_intention_button_start">Start</string>
    <string name="esm_lock_intention_button_done">Done</string>
    <string name="esm_lock_intention_description_promt">Your intention was:</string>
    <string name="esm_lock_notification_title">Questions about your usage time</string>
    <string name="esm_lock_notification_description">Please answer these questions immediately.</string>
    <string name="esm_unlock_notification_title">Question about your usage intention</string>
    <string name="esm_unlock_notification_description">Click here to answer this question immediately.</string>

    <string name="esm_lock_intention_question_intention_finished">Did you <b>finish</b> your intention?</string>
    <string name="esm_lock_intention_question_intention_more">Did you do <b>more</b> than your intention?</string>
    <string name="esm_lock_intention_question_regret">I feel <b>regret</b> for part of my phone use.</string>
    <string name="esm_lock_intention_question_agency">I had a strong sense of <b>agency</b>.</string>
    <string name="esm_lock_intention_question_track_of_time">I have <b>lost track of time</b> while using my phone.</string>
    <string name="esm_lock_intention_question_track_of_space">I had a <b>good sense of my surroundings</b> while using my phone.</string>
    <string name="esm_lock_intention_question_emotion">Which pair of <b>emotion</b> corresponds best to how you felt this usage session?</string>

    <string name="esm_lock_label_stronglyAgree">strongly agree</string>
    <string name="esm_lock_label_stronglyDisagree">strongly disagree</string>
    <string name="esm_button_yes">Yes</string>
    <string name="esm_button_no">No</string>
    <string name="esm_button_other">Other</string>
    <string name="esm_unlock_intention_error">Please enter a intention!</string>
    <string name="esm_button_newIntention">New Intention</string>
    <string name="esm_button_lastIntention">Last Intention</string>
    <string name="esm_intention_example_searchInformation">Search for information</string>
    <string name="esm_intention_example_messaging">Messaging</string>
    <string name="esm_intention_example_noIntention">No concrete intention</string>

    <string-array name="esm_emotionList">
        <item>happiness-elation</item>
        <item>sadness-melancholy</item>
        <item>calm-contentment</item>
        <item>anger-irritation</item>
        <item>nostalgia-longing</item>
        <item>anxiety-fear</item>
        <item>love-tenderness</item>
        <item>surprise-astonishment</item>
        <item>shame-guilt</item>
        <item>disgust-contempt</item>
        <item>pleasure-enjoyment</item>
        <item>boredom-indifference</item>
        <item>interest-expectancy</item>
        <item>other</item>
    </string-array>

    <!-- Permissions -->
    <string name="permission_title">Allow Permissions</string>
    <string name="permission_explanation_description">Please give us access to the following permissions as this application needs them to collect your usage data.</string>
    <string name="permission_request_accessibility_service_title">Enable Accessibility Service</string>
    <string name="permission_request_accessibility_service_notification_title">Please enable the accessibility service for Rabbit Hole Tracker!</string>
    <string name="permission_request_accessibility_service_description">By enabling the accessibility service for this applications, we will be able to track your screen events. \n\nPlease go in the settings to the Downloaded Services section and enable Accessibility Service for the Rabbit Hole Tracker application. \n\nThen come back to this application.</string>
    <string name="permission_request_notification_listener_title">Enable Notifications</string>
    <string name="permission_request_notification_listener_description">Enable notification permissions, so we can collect the timestamps about your received notifications. \n\nPlease select the Rabbit Hole Tracker application in the settings and enable the notification listener. \n\nThen come back to this application.</string>
    <string name="permission_request_usage_stats_title">Give Usage Information Access</string>
    <string name="permission_request_usage_stats_description">Give this app permission to access your usage statistics, so we can collect your usage events. \n\nPlease select the Rabbit Hole Tracker application in the settings and enable usage information access. \n\nThen come back to this application.</string>
    <string name="permission_request_overlay_title">Give Permission to show our app on the lock screen</string>
    <string name="permission_request_overlay_description">Please allow this application RabbitHoleTracker to show our questionnaire on your lockscreen.</string>
    <string name="permission_request_questionnaire_title">Questionnaire</string>
    <string name="permission_request_questionnaire_description">Please fill out the first questionnaire under the following link or by clicking on the notification. \n\nAfter your are finished, come back to this application.</string>
    <string name="permission_request_questionnaire_button">Questionnaire answered</string>
    <string name="permission_request_onboarding_title">Please note</string>
    <string name="permission_request_onboarding_description">Please try to answer the prompted questionnaires always as truthfully as possible.\n\nAfter two weeks of using the app after installation, you will receive a link for the second questionnaire via a notification and in this app.\n\nThis application will collect your usage data in the background. Be aware that it might affect the battery drain and internet usage of your phone. \n\nMake sure than you have internet access as much as possible.\n\nIf you notice that the app is not running, for example after a phone restart, just open the application again to restart logging.</string>
    <string name="permission_settings_button_text">Go to Settings</string>
    <string name="permission_button_text">Allow Permissions</string>
    <string name="permissions_button_continue">Continue</string>

    <!-- Logging -->
    <string name="logging_notification_service_title">Logging is Running</string>
    <string name="logging_notification_service_description">TrackingApp is collecting your usage data.</string>

    <string name="mainScreen_sensorlist_title">Tracking Sensors</string>
    <string name="mainScreen_logging_start_button">Start Logging</string>
    <string name="mainScreen_logging_stop_button">Stop Logging</string>
    <string name="mainScreen_sensorList_is_running">is running</string>
    <string name="mainScreen_sensorList_not_running">not running</string>

    <string name="mainScreen_tab_sensor_title">Sensors</string>
    <string name="mainScreen_tab_contact_title">Information</string>

    <string name="accessibility_button">Accessibility</string>
    <string name="accessibility_button_On">Enabled Accessibility</string>
    <string name="accessibility_button_Off">Disabled Accessibility</string>
    <string name="settings">Settings</string>

    <!-- Contact -->
    <string name="contact_title">Contact</string>
    <string name="contact_description">If you have any questions about this study or run into technical problems with this application, please contact:</string>
    <string name="contact_email">miriam.halsner@campus.lmu.de</string>
    <string name="information_title">Please note</string>
    <string name="information_note">Please make sure that the you see the logging notification of this app at any time and that you receive our short questionnaires, especially after restarting your phone. \n\nIf not, open this application again to restart it. \n\nPlease do not logout of this app during the study if not absolutely necessary.</string>
    <string name="questionnaire_title">Questionnaire</string>
    <string name="questionnaire_note">Your two weeks of study are over, but feel free to continue to use the application for longer if you want to help us out a little bit more. When you are finished, please uninstall this application.\n\nPlease fill out the second questionnaire under the following link, if not already done:</string>
    <string name="link">link</string>
    <string name="tracked_data_title">Tracked Usage Data</string>
    <string name="tracked_data_description">- Demography\n- Smartphone accelerometer sensor data\n- Smartphone gyroscope sensor data\n- Smartphone proximity sensor data\n- Light intensity\n- Smartphone accessibility events\n- Activity recognition \n- Changes in airplane mode\n- Changes in bluetooth connections\n- Changes in ringer mode and sound level\n- Changes in screen rotation\n- Change in screen states\n- Changes in battery levels\n- Changes in internet connections\n- Timestamps of phone calls\n- Timestamps of SMS\n- Timestamps and priority of notifications\n- Internet addresses of visited websites\n- Sent and received bytes</string>
    <string name="tracked_data_note">Your tracked usage data is saved anonymously.</string>

    <!--Survey-->
    <string name="survey_start_notification_title">First Questionnaire</string>
    <string name="survey_end_notification_title">Second Questionnaire</string>
    <string name="survey_notification_description">Click here to answer this questionnaire.</string>

</resources>