<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/esm_unlock_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BlackishGray"
    android:padding="8dp">

    <TextView
        android:id="@+id/esm_unlock_text_before_activeInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/esm_unlock_intention_question"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/background_rounded"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/esm_unlock_text_before_activeInput">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_intention_speech"
            app:tint="@color/white" />

        <AutoCompleteTextView
            android:id="@+id/esm_unlock_autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/LightBlackishGray"
            android:hint="@string/esm_unlock_intention_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/LightBlackishGray" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup_esm_unlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:paddingStart="24dp"
        android:paddingEnd="12dp"
        android:padding="6dp"
        android:background="@drawable/background_rounded"
        android:gravity="start"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <RadioButton
            android:id="@+id/button_esm_unlock_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/esm_button_lastIntention"/>

        <RadioButton
            android:id="@+id/button_esm_unlock_no_intention"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/esm_intention_example_noIntention" />

        <RadioButton
            android:id="@+id/button_esm_unlock_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/esm_intention_example_messaging" />

        <RadioButton
            android:id="@+id/button_esm_unlock_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/esm_intention_example_searchInformation" />

    </RadioGroup>

    <Button
        android:id="@+id/esm_unlock_buttonstart"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="64dp"
        android:layout_marginVertical="32dp"
        android:text="@string/esm_unlock_intention_button_start"
        android:backgroundTint="@color/milkGreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.120000005" />

</androidx.constraintlayout.widget.ConstraintLayout>