<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/esm_unlock_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BlackishGray">

    <TextView
        android:id="@+id/esm_unlock_text_before_activeInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/esm_unlock_intention_question"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/esm_unlock_text_before_activeInput"
        app:layout_constraintVertical_bias="0.060000002">

        <AutoCompleteTextView
            android:id="@+id/esm_unlock_autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:backgroundTint="@color/white"
            android:hint="@string/esm_unlock_intention_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/LightBlackishGray" />

    </LinearLayout>

    <Button
        android:id="@+id/esm_unlock_buttonstart"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/esm_unlock_intention_button_start"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.120000005" />

</androidx.constraintlayout.widget.ConstraintLayout>