<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    card_view:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:background="@color/DarkBlackishGray">

        <TextView
            android:id="@+id/esm_lock_intention_question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/esm_lock_intention_question_intention_finished" />

        <RadioGroup
            android:id="@+id/radioGroup_esm_lock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_horizontal_margin"
            android:gravity="center"
            android:orientation="horizontal"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/esm_lock_intention_question"
            app:layout_constraintVertical_bias="0.0">

            <RadioButton
                android:id="@+id/button_esm_lock_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/esm_button_yes"
                android:theme="@style/RadioButtonESM"
                android:visibility="gone"
                tools:visibility="visible" />

            <RadioButton
                android:id="@+id/button_esm_lock_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/esm_button_no"
                android:visibility="gone"
                tools:visibility="visible" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>